# FluentFlyout

./: .gitattributes  .gitignore  Directory.Build.props  build_and_check.py  build_err.txt  build_err_2.txt  build_err_utf8.txt  build_errors.txt  build_errors_utf8.txt  build_errors_utf8_2.txt  build_output.txt  git_diff_app.txt  git_diff_csproj.txt  git_diff_main.txt  git_diff_output.txt  installer_script.iss  log_tail.txt  orig_app.txt  orig_csproj.txt  orig_settings.txt  orig_slider.txt  orig_tooltip.txt  read_build_err.py  read_build_err_2.py  read_logs.py
FluentFlyoutDisplayHost/: App.xaml  App.xaml.cs  DisplayHostWindow.cs  FluentFlyoutDisplayHost.csproj  MediaFlyoutWindow.xaml  MediaFlyoutWindow.xaml.cs
FluentFlyoutMSIX/: FluentFlyoutMSIX.wapproj  Package.appxmanifest
FluentFlyoutWPF/: App.xaml  App.xaml.cs  FluentFlyout.csproj  MainWindow.xaml.cs  SettingsWindow.xaml  build_err.txt  build_err_2.txt  build_err_3.txt  build_err_utf8.txt  build_err_utf8_2.txt  build_errors.txt  build_errors_en.txt  build_output.txt
FluentFlyoutWPF/Classes/Display/: DisplayHostState.cs  IDisplayHost.cs
FluentFlyoutWPF/Controls/: TaskbarWidgetControl.xaml.cs
FluentFlyoutWPF/Pages/: HomePage.xaml
FluentFlyoutWPF/ViewModels/: UserSettings.cs
FluentFlyoutWPF/Windows/: LockWindow.xaml.cs  NextUpWindow.xaml.cs  TaskbarWindow.xaml.cs
build_output/: FluentFlyout.deps.json
docs/: rust-rewrite-plan.md
fluent_flyout_core/: Cargo.toml  build_output.txt  capture_rust_err.py  check_output.txt  full_rust_err.txt  rust_build_err.txt  rust_build_err_json.txt  rust_check_err.txt  rust_check_err_2.txt  rust_err.txt  rust_err_final.txt  rust_err_short.txt  rust_errors.txt  rust_json_errors.txt
fluent_flyout_core/src/: lib.rs
fluent_flyout_rs/: Cargo.toml  README.md  build.rs
fluent_flyout_rs/src/: main.rs  media.rs  monitor.rs  state.rs  taskbar_native.rs
fluent_flyout_rs/ui/: app.slint
fluent_flyout_rs/ui/components/: wpf_shell.slint
publish_output/: FluentFlyout.deps.json  FluentFlyout.runtimeconfig.json
web-ui/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.cjs  tsconfig.json  vite.config.ts
web-ui/scripts/: check-encoding.mjs
web-ui/src/: App.svelte  app.d.ts  main.ts  styles.css
web-ui/src-tauri/: Cargo.toml  tauri.conf.json
web-ui/src-tauri/capabilities/: default.json
web-ui/src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
web-ui/src-tauri/src/commands/: mod.rs
web-ui/src-tauri/src/services/: audio_meter.rs  display_host.rs  flyout_window.rs  media_session.rs  mod.rs  monitor.rs  runtime_events.rs  settings.rs  startup.rs  taskbar_widget.rs  tray_icon.rs
(+25 files in other folders)
