[package]
name = "fluent_flyout_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustfft = "6.2.0"
num-complex = "0.4.6"
windows = { version = "0.60.0", features = [

    "Media_Control",
    "Media_Playback",
    "Foundation",

    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",

    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }
