[package]
name = "fluent-flyout-tauri"
version = "3.1.2"
description = "FluentFlyout Rust/Tauri port"
authors = ["The FluentFlyout Authors"]
edition = "2024"
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tokio = { version = "1", features = ["sync", "time"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
dirs = "6"
windows = { version = "0.61", features = ["Media_Control", "Media_Playback", "Foundation", "Foundation_Collections", "Storage_Streams", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_Variant", "Win32_UI_Accessibility", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
